<resources>
    <string name="app_name">多一点</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- 主界面 -->
    <string name="index">首页</string>
    <string name="market">商城</string>
    <string name="oil">油品</string>
    <string name="insurance">保险</string>
    <string name="vehicle_service">运输服务</string>
    <string name="box">百宝箱</string>
    <string name="order_main">商品订单</string>
    <string name="collection_main">我的收藏</string>
    <string name="position_main">我的定位</string>
    <string name="weather_main">本地天气</string>
    <string name="oil_server_main">油品服务</string>
    <string name="insurance_main">保险</string>
    <string name="finance_main">金融</string>
    <string name="my_vehicle_order">我的车辆订单</string>
    <string name="today_order">今日订单</string>
    <string name="panorama">全景图</string>
    <string name="latest">最新</string>
    <string name="super_substantial">超实惠!</string>
    <string name="advertisement">超低价抢精品，不亏</string>

    <!-- 左侧滑栏 -->
    <string name="no_login">未登录</string>
    <string name="has_login">已登录</string>
    <string name="exit">退出登录</string>

    <!--导航navigation-->
    <string name="return_text">返回</string>

    <!--用户登入-->
    <string name="user_login">用户登录</string>
    <string name="phone_number">手机号</string>

    <!--用户注册-->
    <string name="register_text">注册</string>
    <string name="register_title">多一点注册</string>
    <string name="p_input_phone_number">请输入手机号</string>
    <string name="confirm_code_text">获取验证码</string>
    <string name="p_input_confirm_code">请输入验证码</string>
    <string name="p_input_password">请输入密码</string>
    <string name="protocol">阅读并同意《软件许可及注册协议》</string>
    <string name="already_account">已有账号？去登录</string>
    <string name="user_alias">昵称</string>

    <!-- 关于我们 -->
    <string name="about_title">关于我们</string>
    <string name="about_sub_theme">多一点智能物流电商平台</string>
    <string name="about_theme_content">
        厦门多一点智能物流科技有限公司（以下简称多一点科技）成立于2015年，总部位于美丽花园城市的厦门，是在弘信物流集团有限公司支持下稳健发展的高科技企业。
 多一点科技致力于货运管家服务平台/一体化物流服务（车货信息交易平台、物流流程透明可视化、免费云端存储）和汽车保姆服务平台/客制化专业服务（供应链融资服务、车辆服务精细化、大数据分析）等领域的互联网运用和运营，业务涵盖软件研发、系统集成、互联网销售、成品油批发零售、保险业务、金融业务、代收代付等，为物流的买卖方双方打造一个智能物流平台，为更多的行业合作伙伴、草根车主和小微企业打造互联网时代的物流新生态圈。
 多一点科技拥有雄厚的产品和技术的研发队伍、先进的开发理念、丰富的技术经验和强大的技术实力。公司核心团队来自于中远、华为等著名企业。
 多一点科技坚持“诚信、学习、创新、执行、务实”的核心价值观，以“与员工共成长，与客户同发展”为经营理念，立志成为业界领先的解决方案专家。
 多一点科技来自于弘信物流，深谙物流行业的运作，更是国际国内一流快消品企业的供应链合作伙伴。
 用我们的技术和经验，为物流的买卖方双方打造一个智能物流平台，为更多的行业合作伙伴，草根车主和小微企业打造互联网时代的物流新生态圈。
    </string>
    <string name="about_sub_address">地址</string>
    <string name="about_navigation">一键导航</string>
    <string name="about_access">一键访问</string>
    <string name="about_sub_url">网址</string>
    <string name="anout_url_content">www.edyd.cn</string>
    <string name="about_sub_telephone">电话</string>
    <string name="about_dial">一键拨打</string>
    <string name="about_telephone_content">4008-761-167</string>
    <string name="about_address_1">福建省厦门市湖里区东渡路258号银龙大厦20层</string>
    <string name="about_address_4">厦门多一点智能物流科技有限公司</string>

    <!-- 油品服务 -->
    <string name="about_oil_service">
        多一点与中石化、中石油合作，为车主提供跨品牌、跨区域、便利、优惠的加油站供应网络；客户充值只能通过“多一点”客服或者“多一点”的PC端，无法自行在加油站充值。客户可通过多一点进行充值和消费对账，且对每家公司或个人进行按月按区域的充值和消费分析和图形展现。
    </string>

    <!--保险服务-->
    <string name="about_insurance_service">
        多一点致力于建立一个全国性的货运保险平台，与中国人民保险、中国平安保险、中国太平洋保险三大保险企业签署合作协议，为多一点平台用户提供专业、便捷、安全、可靠的车险、货运险、仓储财产险等险种服务。
对接保险公司投保系统，网上直接下单投保实时生效，费率可控，帮企业最大程度的规避货运风险。
    </string>

    <!--保险服务-->
    <string name="about_financial_service">
        多一点与招商银行、平安银行、交通银行、华厦银行、民生银行等银行合作，打造一体化金融服务平台，提供代收、代付运费、货款等金融收付款解决方案；
结合客户在平台的运营状况，提供金融机构授信贷款，用于油品、保险、经营等，为企业生产运营提供强有力的金融保障。
对接金融公司金融系统，网上对接，通过透明管理来保障金融安全，以获取更为优惠的金融服务。
    </string>
    <!-- 设置 -->
    <string name="setup_title">设置</string>

    <!--百宝箱-->
    <string name="tx_surrounding_oil">周边加油</string>
    <string name="tx_surrounding_sparking">周边停车</string>
    <string name="tx_violate_check">违章查询</string>
    <string name="tx_violate_payment">违章缴费</string>
    <string name="tx_vehicle_navigation">车辆导航</string>
    <string name="tx_phone_pay">手机充值</string>
    
    <!-- 天气 -->
    <string name="weather_default_value">*_*</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="after_tomorrow">后天</string>
    <string name="pm">PM2.5</string>
    <string name="default_text">_ _</string>
    <string name="forecast">预报</string>
    <string name="information">详细信息</string>
    <string name="felt_air_temp">体感温度</string>
    <string name="humidity">湿度</string>
    <string name="wind">风向风力</string>
    <string name="uv_index">紫外线指数</string>
    <string name="dressing_index">穿衣指数</string>
    <string name="title_city">城市选择</string>

    <!-- 下拉刷新 -->
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>

    <!-- 网络请求 -->

    <!-- 个人信息 -->
    <string name="tv_personal_information">个人信息</string>
    <string name="contact_number">手机号码</string>
    <string name="username">用户名</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="activate_status">认证状态</string>
    <string name="modify_password">修改密码</string>

    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    
    <!-- 企业信息 -->
    <string name="enterprise_info_title">企业信息</string>
    <string name="enterprise_legal_person">企业法人</string>
    <string name="legal_person_contact">法人联系电话</string>
    <string name="enterprise_name">企业名称</string>
    <string name="enterprise_introduction">企业简介</string>

    <!--我的运单-->
    <string name="text_my_way_bill">我的运单</string>

    <!--订单详情-->
    <string name="order_detail_title">订单详情</string>
    <string name="executing_order">执行中的订单</string>
    <string name="transport_service">运输服务</string>
    <string name="receive_order_title">订单操作</string>
    <string name="history_transport_order">历史订单</string>

    <string name="receive_order">接单</string>

    <!-- 角色iD-->
    <string name="role_id">role_id</string>

    <string name="register_protocol_text_one">
        本协议是您与多一点智能物流电商平台（包相应的网站和APP，简称"本平台"，网址：www.edyd.cn）所有者（以下简称为"多一点"）之间就多一点网站服务等相关事宜所订立的契约，请您仔细阅读本注册协议，您点击"同意并继续"按钮后，本协议即构成对双方有约束力的法律文件。
    </string>

    <!--油卡申请-->
    <string name="oil_card_application_title">油卡申请</string>
    <string name="oil_card_amount_distribute">油卡金额分配</string>
    <string name="my_add_oil_title">我的油卡</string>
    <string name="my_add_oil_detail_title">油卡详情</string>
    <string name="oil_service_title">油品服务</string>
    <string name="oil_card_distribute_detail">分配明细</string>
    <string name="oil_card_transaction_detail">交易明细</string>
    <string name="oil_card_changed_title">油卡变更</string>
    <string name="average_distribute_amount">等额预分配</string>
    <string name="select_department_title">选择部门</string>
    <string name="select_card_title">交易明细搜索</string>
    <string name="title_activity_oil_car_set_password">OilCarSetPasswordActivity</string>

    <!--地图导航-->
    <string name="app_id">输入您讯飞的appid</string>
    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_title_tts_speed">语速</string>
    <string name="preference_default_tts_speed">50</string>
    <string name="preference_dialog_title_tts_speed">选择语速</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_title_tts_volume">音量</string>
    <string name="preference_default_tts_volume">50</string>
    <string name="preference_dialog_title_tts_volume">选择音量</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>
    <string name="preference_title_tts_pitch">语调</string>
    <string name="preference_default_tts_pitch">50</string>
    <string name="intell_bd_title">智能播报</string>
    <!--输入框下限制-->
    <string name="register_name_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ@._</string>
</resources>
