<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--模拟ActionBar-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/user_icon_8">
            <LinearLayout
                android:id="@+id/insurance_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_chevron_left_white_36dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/return_text"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/setup_detail_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="保险服务"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@mipmap/insurance"
            android:adjustViewBounds="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_sub_theme"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/about_oil_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5dp"
                android:textSize="12dp"
                android:text="@string/about_insurance_service"/>
            <View
                android:layout_width="match_parent"
                android:background="@android:color/darker_gray"
                android:layout_height="1dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/about_sub_address"/>
                    <Button
                        android:id="@+id/about_navigation"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:textSize="12dp"
                        android:background="@drawable/about_border_filleted_corner"
                        android:text="@string/about_navigation"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/about_address_1"
                    android:textSize="12dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_address_4"
                    android:textSize="12sp"
                    android:layout_marginBottom="5dp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:background="@android:color/darker_gray"
                android:layout_height="1dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/about_sub_url"/>
                <Button
                    android:id="@+id/about_access"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:textSize="12dp"
                    android:background="@drawable/about_border_filleted_corner"
                    android:text="@string/about_access"/>
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/anout_url_content"
                android:textSize="12sp"
                android:layout_marginBottom="5dp"/>
            <View
                android:layout_width="match_parent"
                android:background="@android:color/darker_gray"
                android:layout_height="1dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/about_sub_telephone"/>
                <Button
                    android:id="@+id/about_dial"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:textSize="12dp"
                    android:background="@drawable/about_border_filleted_corner"
                    android:text="@string/about_dial"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/about_telephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/about_telephone_content"
                android:textSize="12sp"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
