<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!--模拟ActionBar-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/user_icon_8">
        <LinearLayout
            android:id="@+id/update_password_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_chevron_left_white_36dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_text"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/modify_password"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:padding="10dp">
            <EditText
                android:id="@+id/et_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_login_password"
                android:drawablePadding="10dp"
                android:hint="@string/old_password"
                android:textSize="16sp"
                android:textColorHint="#CCCCCC"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_login_new_password"
                android:hint="@string/new_password"
                android:textSize="16sp"
                android:drawablePadding="10dp"
                android:textColorHint="#CCCCCC"
                android:layout_marginTop="10dp"
                android:inputType="textPassword" />
            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:textSize="16sp"
                android:drawablePadding="10dp"
                android:textColorHint="#CCCCCC"
                android:layout_marginTop="10dp"
                android:inputType="textPassword" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/personal_info_save"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_corner_login_enable"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:text="保存"/>


    <!--android:background="@color/battery_saver_mode_color"-->
</LinearLayout>