<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:gravity="center">
            <ImageButton
                android:id="@+id/surrounding_oil"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@mipmap/ic_surrounding_oil"
                android:background="#86cbe4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:textSize="14dp"
                android:text="@string/tx_surrounding_oil"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:gravity="center">
            <ImageButton
                android:id="@+id/surrounding_sparking"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@mipmap/ic_surrounding_sparking"
                android:background="#9fd00a"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:text="@string/tx_surrounding_sparking"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center">
            <ImageButton
                android:id="@+id/violate_check"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@mipmap/ic_violate_check"
                android:background="#fe8f22"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:textSize="14dp"
                android:text="@string/tx_violate_check"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center">
            <ImageButton
                android:id="@+id/violate_payment"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@mipmap/ic_violate_payment"
                android:background="#86a5e4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:text="@string/tx_violate_payment"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center">
            <ImageButton
                android:id="@+id/vehicle_navigation"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@mipmap/ic_vehicle_navigation"
                android:background="#86e4b4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:text="@string/tx_vehicle_navigation"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center">
            <ImageButton
                android:id="@+id/phone_pay"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@mipmap/ic_phone_pay"
                android:background="#f0c019"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:text="@string/tx_phone_pay"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center">
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@mipmap/continued"
                android:background="#19d9f0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:text="未完待续"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:visibility="invisible"
            android:gravity="center">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:visibility="invisible"
            android:gravity="center">

        </LinearLayout>
    </LinearLayout>

</LinearLayout>